--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
 body{
-	background: #CCC;
+	background: url("../images/main-bg.jpg");
+	background-attachment: fixed;
+	background-size: cover;
+	webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
 }
