--- a/style/style.css
+++ b/style/style.css
@@ -31,14 +31,14 @@ height: 42px;
 background: #363f48;
 }
 
-<<<<<<< HEAD
+
 #content {
     margin: 0 auto;
     width: 1200px;
     height: 550px;
     border: 1px solid black;
     margin-top: none;
-=======
+}
 .infoLeft{
 float: left;
 border: solid green 1px;
@@ -60,5 +60,5 @@ display: block;
 height: 24px;
 width: 25px;
 background: url("../images/sprites_link.png") -25px;
->>>>>>> origin/master
+
 }
