--- a/style/style.css
+++ b/style/style.css
@@ -11,34 +11,30 @@ webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 }
-
+/*Main Align Start*/
 #main{
 width: 1200px;
-height: auto;
+height: 550px;
 margin: 0 auto;
 border: solid blue 1px;
 }
+/*Main Align End*/
 
-#pageAlign{
-margin: 0 auto;
-border: solid red 1px;
-width: 1000px;
-height: auto;
-}
-
+/*Info Bar Start*/
 #infoBar{
-height: 42px;
+border: solid red 1px;
+width: 1200px;
 background: #363f48;
+margin: 0 auto;
 }
 
-
-#content {
-    margin: 0 auto;
-    width: 1200px;
-    height: 550px;
-    border: 1px solid black;
-    margin-top: none;
+#infoBarAlign{
+height: 42px;
+border: solid yellow 1px;
+margin: 0 auto;
+width: 1000px;
 }
+
 .infoLeft{
 float: left;
 border: solid green 1px;
@@ -60,5 +56,10 @@ display: block;
 height: 24px;
 width: 25px;
 background: url("../images/sprites_link.png") -25px;
-
 }
+
+.infoRight{
+float: right;
+border: solid green 1px;
+}
+/*Info Bar End*/
